# ssimand

./: .gitignore  README.md  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/whoevencares/ssimand/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/whoevencares/ssimand/: MainActivity.kt  NativeLib.java
app/src/main/java/com/whoevencares/ssimand/ui/components/: OpenFile.kt  TopBarNav.kt
app/src/main/java/com/whoevencares/ssimand/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/whoevencares/ssimand/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ssimers/: Cargo.toml
ssimers/src/: dalvik_wrapper.rs  image.rs  lib.rs  logger.rs
ssimers/tests/: image.rs  ssim.rs
