[package]
name = "ssim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
jni = "0.21.1"
# ssimers = { path = "./src" }

[lib]
crate-type = ["rlib", "dylib"]

[profile.release]
strip = true
